kubernetes/istio-demo/egress-tls/00-no-injected-curl-pods.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: no-injected-curl
  labels:
    app: no-injected-curl
spec:
  containers:
    - name: no-injected-curl
      image: lukelau/curl:0.0.1
      command: ['sh', '-c', 'sleep 100000']
