kubernetes/istio-demo/egress-tls/01-injected-curl-pods.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: injected-curl
  labels:
    app: injected-curl
  annotations:
    sidecar.istio.io/inject: "true"
spec:
  containers:
    - name: injected-curl
      image: lukelau/curl:0.0.1
      command: ['sh', '-c', 'sleep 100000']
