kubernetes/istio-demo/egress-tls/31-service-for-ingress.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: liqiangio
  namespace: istio-system
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
    release: istio
