kubernetes/istio-demo/egress-tls/50-istio-egress-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: liqiangio
  namespace: istio-system
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: istio-egressgateway
    istio: egressgateway
    release: istio
