kubernetes/istio-demo/egress-tls/32-liqiangio-ingress-gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: liqiang-io-ingress-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
      - "liqiangio.istio-system"
      - "liqiangio.istio-system.svc"
      - "liqiangio.istio-system.svc.default.local"
