kubernetes/istio-demo/egress-tls/10-virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: liqiang.io-io
spec:
  hosts:
    - liqiang.io.io
  http:
    - match:
        - port: 80
      route:
        - destination:
            host: liqiang.io.io
            port:
              number: 443
