kubernetes/istio-demo/egress-tls/22-liqiangio-ingress-virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: liqiang-io-virtual-service
spec:
  hosts:
    - "*"
  gateways:
    - liqiang-io-gateway
  http:
    - match:
      - port: 80
      route:
        - destination:
            host: liqiang.io
            port:
              number: 443
