kubernetes/istio-demo/egress-tls/33-liqiangio-ingress-virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: liqiang-io-ingress-virtual-service
spec:
  hosts:
  - "liqiang.io"
  - "liqiangio.istio-system"
  - "liqiangio.istio-system.svc"
  - "liqiangio.istio-system.svc.default.local"
  gateways:
  - liqiang-io-ingress-gateway
  http:
    - match:
      - port: 80
      route:
        - destination:
            host: liqiang.io
            port:
              number: 443
      headers:
        request:
          set:
            Host: liqiang.io
