kubernetes/istio-demo/egress-tls/43-liqiangio-ingress-virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: liqiang-io-ingress-virtual-service
spec:
  hosts:
  - "liqiangio.istio-system"
  - "liqiangio.istio-system.svc"
  - "liqiangio.istio-system.svc.default.local"
  gateways:
  - liqiang-io-ingress-gateway
  http:
    - match:
      - port: 80
      route:
        - destination:
            host: istio-egressgateway.istio-system.svc.cluster.local
            port:
              number: 80
      headers:
        request:
          set:
            Host: liqiang.io
