kubernetes/istio-demo/egress-tls/46-liqiangio-egress-destination-rule.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
    name: originate-tls-for-liqiang.io-io
spec:
  host: liqiang.io.io
  trafficPolicy:
    loadBalancer:
        simple: ROUND_ROBIN
    portLevelSettings:
    - port:
        number: 443
      tls:
        mode: SIMPLE
