kubernetes/istio-demo/egress-tls/51-istio-egress-gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-egressgateway
spec:
  selector:
    istio: egressgateway
  servers:
    - port:
        number: 80
        name: http-port-for-tls-istio
        protocol: HTTP
      hosts:
        - istio.io
        - istio.istio-system
        - istio.istio-system.svc
        - istio.istio-system.svc.default.local
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: egressgateway-for-istio
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:
    - name: cnn
