kubernetes/istio-demo/egress-tls/52-istio-egress-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: liqiangio-through-egress-gateway
spec:
  hosts:
  - istio.io
  - istio.istio-system
  - istio.istio-system.svc
  - istio.istio-system.svc.default.local
  gateways:
  - istio-egressgateway
  - mesh
  http:
  - match:
    - gateways:
      - mesh
      port: 80
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        subset: cnn
        port:
          number: 80
      weight: 100
  - match:
    - gateways:
      - istio-egressgateway
      port: 80
    route:
    - destination:
        host: istio.io
        port:
          number: 443
      headers:
        request:
          set:
            Host: istio.io
