kubernetes/istio-demo/egress-tls/53-istio-egress-destination-rule.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
    name: originate-tls-for-liqiang-io
spec:
  host: istio.io
  trafficPolicy:
    portLevelSettings:
    - port:
        number: 443
      tls:
        mode: SIMPLE
